# basic-ml

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
basic_ml/: eval.py  vis.py
basic_ml/src/: basic_ml.py
demo/: index.html  track_demo.js  utils.js
docs/: tracker.md
javascript/: module.cpp
python/: byte.hpp  kalman.hpp  module.cpp  rpca.cpp  rpca.hpp  tracker.hpp
tests/: test_rpca.cpp  test_rpca.py  test_tracker.py
